Xong chức năng nộp bài tập theo nhóm

--- a/DoAnMon/Views/BaiTaps/Index.cshtml
+++ b/DoAnMon/Views/BaiTaps/Index.cshtml
@@ -155,8 +155,8 @@
                 <div class="assignment">
                     <div class="assignment-content">
                         <h3>@item.Title</h3>
-                        <p>Hạn nộp: @item.Deadline</p>
-                        <p>Hạn nộp: @item.CreatedAt</p>
+                        <p><strong>Hạn nộp:</strong> @item.Deadline</p>
+                        <p><strong>Ngày tạo:</strong> @item.CreatedAt</p>
                     </div>
                     @if (User.IsInRole("Teacher"))
                     {
