--- a/DoAnMon/Views/ClassRooms/GetAllBTStu.cshtml
+++ b/DoAnMon/Views/ClassRooms/GetAllBTStu.cshtml
@@ -5,7 +5,7 @@
 @model IEnumerable<DoAnMon.Models.BaiNop>
 
 @{
-	ViewData["Title"] = "GetAllStu";
+	ViewData["Title"] = "Bài tập sinh viên";
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
